feat: npx로 실행가능하게 bin 업데이트

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "description": "make your crlf to lf",
   "main": "index.cjs",
   "type": "commonjs",
+  "bin": {
+    "lfify": "./index.cjs"
+  },
   "scripts": {
     "test": "jest",
     "lint": "eslint ."
