--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lfify",
+  "name": "@gyeonghokim/lfify",
   "private": "false",
   "version": "1.0.0",
   "description": "make your crlf to lf",
