--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@gyeonghokim/lfify",
   "version": "1.0.0",
+  "private": false,
   "description": "make your crlf to lf",
   "main": "index.cjs",
   "type": "commonjs",
@@ -11,7 +12,10 @@
     "test": "jest",
     "lint": "eslint ."
   },
-  "repository": "github:GyeongHoKim/lfify",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/GyeongHoKim/lfify"
+  },
   "publishConfig": {
     "@GyeongHoKim:registry": "https://npm.pkg.github.com"
   },
