--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/GyeongHoKim/lfify"
   },
   "publishConfig": {
-    "@GyeongHoKim:registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com"
   },
   "keywords": [
     "eol",
