--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lfify",
-  "version": "0.0.0-development",
+  "version": "1.1.0",
   "private": false,
   "description": "make your crlf to lf",
   "main": "index.cjs",
@@ -31,7 +31,13 @@
   },
   "homepage": "https://github.com/GyeongHoKim/lfify#readme",
   "dependencies": {
-    "micromatch": "^4.0.8"
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^12.0.2",
+    "@semantic-release/release-notes-generator": "^14.1.0",
+    "micromatch": "^4.0.8",
+    "semantic-release": "^24.2.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
