--- a/package.json
+++ b/package.json
@@ -31,18 +31,18 @@
   },
   "homepage": "https://github.com/GyeongHoKim/lfify#readme",
   "dependencies": {
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/commit-analyzer": "^13.0.1",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/npm": "^12.0.2",
-    "@semantic-release/release-notes-generator": "^14.1.0",
-    "micromatch": "^4.0.8",
-    "semantic-release": "^24.2.9"
+    "micromatch": "^4.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^13.1.3",
+    "@semantic-release/release-notes-generator": "^14.1.0",
     "eslint": "^9.15.0",
     "globals": "^15.12.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "semantic-release": "^25.0.2"
   }
 }
