--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "globals": "^15.12.0",
     "jest": "^29.7.0",
     "semantic-release": "^25.0.2"
+  },
+  "resolutions": {
+    "tar": "6.1.11"
   }
 }
