--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "url": "https://github.com/GyeongHoKim/lfify"
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org"
+    "registry": "https://registry.npmjs.org",
+    "provenance": true
   },
   "keywords": [
     "eol",
@@ -44,8 +45,5 @@
     "globals": "^15.12.0",
     "jest": "^29.7.0",
     "semantic-release": "^25.0.2"
-  },
-  "resolutions": {
-    "tar": "6.1.11"
   }
 }
